--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<!--    &lt;!&ndash; Google tag (gtag.js) &ndash;&gt;-->
+<!--    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XQZWBNG700"></script>-->
+<!--    <script>-->
+<!--      window.dataLayer = window.dataLayer || [];-->
+<!--      function gtag(){dataLayer.push(arguments);}-->
+<!--      gtag('js', new Date());-->
+
+<!--      gtag('config', 'G-XQZWBNG700');-->
+<!--    </script>-->
     <meta charset="utf-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
