--- a/public/index.html
+++ b/public/index.html
@@ -6,27 +6,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:wght@300&family=Pacifico&family=Quicksand&family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
     <link rel="icon" href="%PUBLIC_URL%/uhe_logo.png" />
+    <link rel="preload" href="../src/assets/images/education_opening_image.png" as="image">
+    <link rel="preload" href="../src/assets/images/home_opening_image.png" as="image">
+    <link rel="preload" href="../src/assets/images/contact_us_opening_image.png" as="image">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="UH Esports is a college esports program that draws on the strengths of our community of mentors, educators, and alumni to provide students with opportunities for collegiate competition in esports, career paths into the wider video games industry, and a space that welcomes a diversity of students from all UH campuses."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/uhe_logo.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>University of Hawaii Esports</title>
   </head>
   <body>
